--- a/src/documents/css/_page_components.scss
+++ b/src/documents/css/_page_components.scss
@@ -13,14 +13,78 @@ body#components {
 		display: block;
 	}
 
-	.content {
-		margin: 20px 0 50px 0;
-		padding: 0;
-		width: auto;
-	}
+	section#content-container {
 
-	.article-info {
-		display: none;
+		> div#content {
+			margin: 20px 0 50px 0;
+			padding: 0;
+			width: auto;
+
+			ul.segment-control {
+				font-size: 0px;
+				display: inline-block;
+				padding: 0 0 0 1px;
+				margin: 0;
+
+				$segment-color: $onsen-red;
+				$segment-color-light: $onsen-red-light;
+
+				> li {
+					display: inline-block;
+					font-size: (15px/$basefont)+rem;
+					font-weight: 200;
+					min-width: 90px;
+					height: 32px;
+					border: 1px solid $segment-color;
+					padding: 0 8px;
+					margin: 0 0 0 -1px;
+					border-radius: 0px;
+					text-align: center;
+					background-color: white;
+					color: $segment-color;
+					line-height: 32px;
+					cursor: pointer;
+					-webkit-font-smoothing: antialiased;
+					transition:
+					all 200ms linear,
+					color 200ms linear,
+					font-weight 200ms linear,
+					border-color 200ms linear;
+					font-weight: 400;
+
+					&:first-child {
+						border-radius: 4px 0 0 4px;
+					}
+
+					&:last-child {
+						border-radius: 0 4px 4px 0;
+					}
+
+					&.current {
+						background-color: $segment-color;
+						color: white;
+						border-color: $segment-color;
+						font-weight: 400;
+						transition: none;
+						position: relative;
+						z-index: 1;
+
+						&:hover {
+							background-color: $segment-color;
+						}
+					}
+
+					&:hover {
+						background-color: $segment-color-light;
+						transition: none;
+					}
+				}
+			}
+		}
+
+		> aside.content-info {
+			display: none;
+		}
 	}
 
 	div.right-col {
@@ -219,64 +283,4 @@ body#components {
 		visibility: hidden;
 	}
 
-	ul.segment-control {
-		font-size: 0px;
-		display: inline-block;
-		padding: 0 0 0 1px;
-		margin: 0;
-
-		$segment-color: $onsen-red;
-		$segment-color-light: $onsen-red-light;
-
-		> li {
-			display: inline-block;
-			font-size: (15px/$basefont)+rem;
-			font-weight: 200;
-			min-width: 90px;
-			height: 32px;
-			border: 1px solid $segment-color;
-			padding: 0 8px;
-			margin: 0 0 0 -1px;
-			border-radius: 0px;
-			text-align: center;
-			background-color: white;
-			color: $segment-color;
-			line-height: 32px;
-			cursor: pointer;
-			-webkit-font-smoothing: antialiased;
-			transition:
-			all 200ms linear,
-			color 200ms linear,
-			font-weight 200ms linear,
-			border-color 200ms linear;
-			font-weight: 400;
-
-			&:first-child {
-				border-radius: 4px 0 0 4px;
-			}
-
-			&:last-child {
-				border-radius: 0 4px 4px 0;
-			}
-
-			&.current {
-				background-color: $segment-color;
-				color: white;
-				border-color: $segment-color;
-				font-weight: 400;
-				transition: none;
-				position: relative;
-				z-index: 1;
-
-				&:hover {
-					background-color: $segment-color;
-				}
-			}
-
-			&:hover {
-				background-color: $segment-color-light;
-				transition: none;
-			}
-		}
-	}
 }
